--- a/app/src/main/res/layout/attachment_preview_fragment.xml
+++ b/app/src/main/res/layout/attachment_preview_fragment.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:custom="http://schemas.android.com/apk/res-auto">
 
     <data>
         <variable
@@ -119,12 +120,25 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/small_margin"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/floatingActionButton_send"
             app:showAttachmentIcon="false"
             app:showCameraIcon="false"
-            app:showEmojiIcon="false"
-            app:showOnlySendIcon="true"/>
+            app:showEmojiIcon="false"/>
+
+        <com.naposystems.pepito.ui.custom.fabSend.FabSend
+            android:id="@+id/floatingActionButton_send"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/x_small_margin"
+            android:contentDescription="submit|!!"
+            android:src="@drawable/anim_mic_send"
+            app:elevation="1dp"
+            app:fabCustomSize="@dimen/conversation_fab_size"
+            app:layout_constraintBottom_toBottomOf="@id/inputPanel"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/inputPanel"
+            custom:showOnlySendIcon="true" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
