--- a/app/src/main/res/layout/add_contact_friendship_request_offer.xml
+++ b/app/src/main/res/layout/add_contact_friendship_request_offer.xml
@@ -24,6 +24,7 @@
             android:id="@+id/imageView_user_image"
             android:layout_width="70dp"
             android:layout_height="70dp"
+            android:background="@drawable/border_avatar_contact"
             app:avatar="@{friendshipRequest.contact}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
