--- a/app/src/main/res/layout/add_contact_friendship_request_received.xml
+++ b/app/src/main/res/layout/add_contact_friendship_request_received.xml
@@ -25,6 +25,7 @@
             android:layout_width="70dp"
             android:layout_height="70dp"
             app:avatar="@{friendshipRequest.contact}"
+            android:background="@drawable/border_avatar_contact"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
