--- a/app/src/main/res/values-it/general.xml
+++ b/app/src/main/res/values-it/general.xml
@@ -25,6 +25,9 @@
     <string name="text_camera">Fotocamera</string>
     <string name="text_location">Posizione</string>
     <string name="text_audio">Audio</string>
+    <string name="text_video">Video</string>
+    <string name="text_photo">Foto</string>
+    <string name="text_gif">Gif</string>
     <string name="text_document">Documento</string>
     <string name="text_add">Aggiungere</string>
     <string name="text_sent">Inviato</string>
