--- a/app/src/main/res/values-it/appearance_settings.xml
+++ b/app/src/main/res/values-it/appearance_settings.xml
@@ -11,4 +11,5 @@
     <string name="text_conversation_background">Sfondo di conversazione</string>
     <string name="text_updated_successfully">Lo sfondo della conversazione è stato modificato correttamente</string>
     <string name="text_error_updating_conversation_background">Si è verificato un errore durante la modifica dello sfondo della conversazione, riprova</string>
+    <string name="text_time_format">Formato de hora</string>
 </resources>
