--- a/app/src/main/res/values-pt/appearance_settings.xml
+++ b/app/src/main/res/values-pt/appearance_settings.xml
@@ -11,4 +11,5 @@
     <string name="text_conversation_background">Contexto da conversa</string>
     <string name="text_updated_successfully">O plano de fundo da conversa foi alterado com sucesso</string>
     <string name="text_error_updating_conversation_background">Ocorreu um erro ao alterar o plano de fundo da conversa, tente novamente</string>
+    <string name="text_time_format">Formato de hora</string>
 </resources>
