--- a/app/src/main/res/values-de/appearance_settings.xml
+++ b/app/src/main/res/values-de/appearance_settings.xml
@@ -11,4 +11,5 @@
     <string name="text_conversation_background">Gesprächshintergrund</string>
     <string name="text_updated_successfully">Der Konversationshintergrund wurde erfolgreich geändert</string>
     <string name="text_error_updating_conversation_background">Beim Ändern des Gesprächshintergrunds ist ein Fehler aufgetreten. Bitte versuchen Sie es erneut</string>
+    <string name="text_time_format">Zeitformat</string>
 </resources>
