--- a/app/src/main/res/layout/preview_media_fragment.xml
+++ b/app/src/main/res/layout/preview_media_fragment.xml
@@ -18,52 +18,51 @@
         android:focusable="true"
         tools:context=".ui.previewMedia.PreviewMediaFragment">
 
-        <ViewSwitcher
-            android:id="@+id/viewSwitcher"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+        <ImageView
+            android:id="@+id/imageView_preview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/black"
+            android:visibility="gone"
+            app:previewImage="@{message}"
+            tools:src="@drawable/vertical_photo" />
 
-            <FrameLayout
-                android:id="@+id/container_video_view"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/black">
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/container_video_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone"
+            tools:visibility="visible">
 
-                <com.google.android.exoplayer2.ui.PlayerView
-                    android:id="@+id/videoView"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center" />
+            <com.google.android.exoplayer2.ui.PlayerView
+                android:id="@+id/videoView"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-                <com.naposystems.pepito.ui.custom.animatedTwoVectorView.AnimatedTwoVectorView
-                    android:id="@+id/imageButton_play"
-                    android:layout_width="64dp"
-                    android:layout_height="64dp"
-                    android:layout_gravity="center"
-                    android:layout_marginStart="@dimen/x_small_margin"
-                    android:background="@drawable/bg_play_attachment_preview"
-                    android:clickable="true"
-                    android:focusable="true"
-                    android:scaleType="fitCenter"
-                    app:firstAnimation="@drawable/anim_play_to_pause"
-                    app:secondAnimation="@drawable/anim_pause_to_play"
-                    app:srcCompat="@drawable/ic_play_arrow_black"
-                    app:tint="@color/white" />
+            <com.naposystems.pepito.ui.custom.animatedTwoVectorView.AnimatedTwoVectorView
+                android:id="@+id/imageButton_play"
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                android:layout_gravity="center"
+                android:layout_marginStart="@dimen/x_small_margin"
+                android:background="@drawable/bg_play_attachment_preview"
+                android:clickable="true"
+                android:focusable="true"
+                android:scaleType="fitCenter"
+                app:firstAnimation="@drawable/anim_play_to_pause"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:secondAnimation="@drawable/anim_pause_to_play"
+                app:srcCompat="@drawable/ic_play_arrow_black"
+                app:tint="@color/white" />
 
-            </FrameLayout>
-
-            <ImageView
-                android:id="@+id/imageView_preview"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/black"
-                app:previewImage="@{message}"
-                tools:src="@drawable/vertical_photo" />
-        </ViewSwitcher>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <!-- HEADER -->
         <androidx.constraintlayout.widget.ConstraintLayout
