--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -28,7 +28,7 @@
     <dimen name="x_x_small_padding">2dp</dimen>
     <dimen name="text_size_audio_duration">12sp</dimen>
     <dimen name="text_size_call_title">20sp</dimen>
-    <dimen name="circle_progress_bar">8dp</dimen>
+    <dimen name="circle_progress_bar">4dp</dimen>
     <dimen name="text_size_self_destruct_time">12sp</dimen>
     <item name="width_app_button" format="float" type="dimen">0.8</item>
     <item name="alpha_drawer_header" format="float" type="dimen">0.25</item>
@@ -37,6 +37,8 @@
     <item name="max_length_status" format="integer" type="dimen">80</item>
     <dimen name="width_self_destruct_time">60dp</dimen>
     <dimen name="height_self_destruct_time">15dp</dimen>
+    <dimen name="width_attachment_circle_progress">70dp</dimen>
+    <dimen name="height_attachment_circle_progress">70dp</dimen>
 
     <!-- BEGIN MATERIAL RIPPLE DIMENS -->
     <item name="low_ripple_pressed_alpha" format="float" type="dimen">0.12</item>
