--- a/app/src/main/res/layout/add_contact_fragment.xml
+++ b/app/src/main/res/layout/add_contact_fragment.xml
@@ -41,50 +41,10 @@
                         android:inAnimation="@anim/fade_in"
                         android:outAnimation="@anim/fade_out">
 
-                        <androidx.constraintlayout.widget.ConstraintLayout
-                            android:id="@+id/container_empty_state_friendship"
+                        <com.naposystems.pepito.ui.custom.emptyState.EmptyStateCustomView
+                            android:id="@+id/empty_state_friendship_request"
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent">
-
-                            <androidx.appcompat.widget.AppCompatImageView
-                                android:id="@+id/imageView_empty_state_friendship"
-                                android:layout_width="0dp"
-                                android:layout_height="0dp"
-                                app:layout_constraintBottom_toTopOf="@id/textView_description_title_friendship"
-                                app:layout_constraintEnd_toEndOf="parent"
-                                app:layout_constraintHeight_percent="0.3"
-                                app:layout_constraintStart_toStartOf="parent"
-                                app:layout_constraintTop_toTopOf="parent"
-                                app:layout_constraintVertical_chainStyle="packed"
-                                app:srcCompat="@drawable/image_empty_state_friendship" />
-
-                            <TextView
-                                android:id="@+id/textView_description_title_friendship"
-                                style="@style/TextViewSecondaryTitle"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginTop="@dimen/normal_margin"
-                                android:paddingStart="@dimen/small_padding"
-                                android:paddingEnd="@dimen/small_padding"
-                                android:text="@string/text_description_empty_state_blocked_contacts"
-                                android:textAlignment="center"
-                                app:layout_constraintBottom_toBottomOf="parent"
-                                app:layout_constraintEnd_toEndOf="parent"
-                                app:layout_constraintStart_toStartOf="parent"
-                                app:layout_constraintTop_toBottomOf="@id/imageView_empty_state_friendship" />
-
-                            <TextView
-                                android:id="@+id/textView_description_friendship"
-                                style="@style/BodyTextView"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginTop="@dimen/small_margin"
-                                android:text="No tiene solicitudes de amistad|!!"
-                                app:layout_constraintEnd_toEndOf="parent"
-                                app:layout_constraintStart_toStartOf="parent"
-                                app:layout_constraintTop_toBottomOf="@+id/textView_description_title_friendship" />
-
-                        </androidx.constraintlayout.widget.ConstraintLayout>
+                            android:layout_height="match_parent" />
 
                         <androidx.recyclerview.widget.RecyclerView
                             android:id="@+id/recyclerView_friendship_request"
@@ -105,50 +65,10 @@
                     android:inAnimation="@anim/fade_in"
                     android:outAnimation="@anim/fade_out">
 
-                    <androidx.constraintlayout.widget.ConstraintLayout
-                        android:id="@+id/container_empty_state_search"
+                    <com.naposystems.pepito.ui.custom.emptyState.EmptyStateCustomView
+                        android:id="@+id/empty_state_search"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent">
-
-                        <androidx.appcompat.widget.AppCompatImageView
-                            android:id="@+id/imageView_empty_state_search"
-                            android:layout_width="0dp"
-                            android:layout_height="0dp"
-                            app:layout_constraintBottom_toTopOf="@id/textView_description_title_state_search"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintHeight_percent="0.3"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintVertical_chainStyle="packed"
-                            app:srcCompat="@drawable/image_empty_state_search" />
-
-                        <TextView
-                            android:id="@+id/textView_description_title_state_search"
-                            style="@style/TextViewSecondaryTitle"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/normal_margin"
-                            android:text="Busca a Tus Amigos!!"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toBottomOf="@id/imageView_empty_state_search" />
-
-                        <TextView
-                            android:id="@+id/textView_description_state_search"
-                            style="@style/BodyTextView"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/small_margin"
-                            android:textAlignment="center"
-                            android:text="Busca un Apodo, agrégalo y comparte con esa persona de una forma privada y segura!!"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintWidth_percent="0.9"
-                            app:layout_constraintTop_toBottomOf="@+id/textView_description_title_state_search" />
-
-
-                    </androidx.constraintlayout.widget.ConstraintLayout>
+                        android:layout_height="match_parent" />
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/recyclerView_contacts"
