--- a/app/src/main/res/values-es/contacts.xml
+++ b/app/src/main/res/values-es/contacts.xml
@@ -7,4 +7,6 @@
     <string name="text_blocked_contact">Contacto bloqueado</string>
     <string name="text_deleted_contact">Contacto eliminado</string>
     <string name="search_by_nickname">Busca por apodo</string>
+    <string name="text_empty_state_contacts_title">Contactos</string>
+    <string name="text_empty_state_contacts_description">No tienes contactos agregados</string>
 </resources>
