--- a/app/src/main/res/values-fr/blocked_contacts.xml
+++ b/app/src/main/res/values-fr/blocked_contacts.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="text_blocked_contacts_info">Les contacts de cette liste ne pourront ni communiquer avec vous ni accéder à votre profil.</string>
-    <string name="text_description_empty_state_blocked_contacts">Il n\'a pas de contacts bloqués</string>
+    <string name="text_empty_state_blocked_contacts_title">Contacts bloqués</string>
+    <string name="text_empty_state_blocked_contacts_description">Il n\'a pas de contacts bloqués</string>
     <string name="text_blocked_contact_not_found">Ups! Tu búsqueda no trajo resultados</string>
     <string name="text_wish_unblock_contact">Voulez-vous déverrouiller %1$s?</string>
     <string name="text_unblocked_contact">Contact déverrouillé</string>
