--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -576,7 +576,7 @@
     <fragment
         android:id="@+id/attachmentGalleryFoldersFragment"
         android:name="com.naposystems.pepito.ui.attachmentGalleryFolder.AttachmentGalleryFoldersFragment"
-        android:label="attachment_gallery_fragment"
+        android:label=""
         tools:layout="@layout/attachment_gallery_folders_fragment">
         <argument
             android:name="contact"
@@ -598,7 +598,7 @@
     <fragment
         android:id="@+id/attachmentGalleryFragment"
         android:name="com.naposystems.pepito.ui.attachmentGallery.AttachmentGalleryFragment"
-        android:label="AttachmentGalleryFragment"
+        android:label=""
         tools:layout="@layout/attachment_gallery_fragment">
         <argument
             android:name="contact"
@@ -705,7 +705,7 @@
     <fragment
         android:id="@+id/attachmentDocumentFragment"
         android:name="com.naposystems.pepito.ui.attachmentDocument.AttachmentDocumentFragment"
-        android:label="attachment_document_fragment"
+        android:label="@string/text_document"
         tools:layout="@layout/attachment_document_fragment" />
     <fragment
         android:id="@+id/attachmentLocationFragment"
