--- a/app/src/main/res/layout/add_contact_fragment.xml
+++ b/app/src/main/res/layout/add_contact_fragment.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:custom="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -44,7 +45,10 @@
                         <com.naposystems.pepito.ui.custom.emptyState.EmptyStateCustomView
                             android:id="@+id/empty_state_friendship_request"
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent" />
+                            android:layout_height="match_parent"
+                            custom:description="@string/text_empty_state_friendship_description"
+                            custom:image="@drawable/image_empty_state_friendship"
+                            custom:title="@string/text_empty_state_friendship_title"/>
 
                         <androidx.recyclerview.widget.RecyclerView
                             android:id="@+id/recyclerView_friendship_request"
@@ -68,7 +72,10 @@
                     <com.naposystems.pepito.ui.custom.emptyState.EmptyStateCustomView
                         android:id="@+id/empty_state_search"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent" />
+                        android:layout_height="match_parent"
+                        custom:description="@string/text_empty_state_search_description"
+                        custom:image="@drawable/image_empty_state_search"
+                        custom:title="@string/text_empty_state_search_title"/>
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/recyclerView_contacts"
