--- a/app/src/main/res/layout/blocked_contacts_fragment.xml
+++ b/app/src/main/res/layout/blocked_contacts_fragment.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:custom="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -103,7 +104,10 @@
             <com.naposystems.pepito.ui.custom.emptyState.EmptyStateCustomView
                 android:id="@+id/empty_state"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                custom:description="@string/text_empty_state_blocked_contacts_description"
+                custom:image="@drawable/image_empty_state_blocked_contacts"
+                custom:title="@string/text_empty_state_blocked_contacts_title" />
 
         </ViewSwitcher>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
