--- a/app/src/main/res/values-es/general.xml
+++ b/app/src/main/res/values-es/general.xml
@@ -53,4 +53,5 @@
     <string name="text_message_restore_image">¿Está seguro que desea restablecer la imagen de portada por defecto?</string>
     <string name="text_display_name">Nombre a mostrar</string>
     <string name="text_nickname_not_contain_enough_char">El apodo debe contener mínimo 5 caracteres.</string>
+    <string name="text_now">Ahora</string>
 </resources>
