--- a/app/src/main/res/values-fr/general.xml
+++ b/app/src/main/res/values-fr/general.xml
@@ -54,4 +54,5 @@
     <string name="text_message_restore_image">Voulez-vous vraiment restaurer l\'image de couverture par défaut?</string>
     <string name="text_display_name">Nom d\'affichage</string>
     <string name="text_nickname_not_contain_enough_char">Le surnom doit contenir au moins 5 caractères.</string>
+    <string name="text_now">Maintenant</string>
 </resources>
