--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -8,9 +8,11 @@
     <color name="colorSecondaryDark">#505564</color>
     <color name="primaryTextColor">#F2F2F2</color>
     <color name="secondaryTextColor">#F2F2F2</color>
+    <color name="textColorTimeAndMessage">#4d4d4d</color>
     <color name="secondaryTextColorForAll">#4d4d4d</color>
     <color name="linkTextColor">#29ABE2</color>
     <color name="white">#f2f2f2</color>
+    <color name="textColorBadge">#000000</color>
     <color name="black">#000000</color>
     <color name="black_40">#66000000</color>
     <color name="colorError">#EF5350</color>
