--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,9 +8,11 @@
     <color name="colorSecondaryDark">#9b9b9b</color>
     <color name="primaryTextColor">#f2f2f2</color>
     <color name="secondaryTextColor">#4d4d4d</color>
+    <color name="textColorTimeAndMessage">#8B8989</color>
     <color name="secondaryTextColorForAll">#4d4d4d</color>
     <color name="linkTextColor">#29ABE2</color>
     <color name="white">#f2f2f2</color>
+    <color name="textColorBadge">#f2f2f2</color>
     <color name="black">#000000</color>
     <color name="black_212121">#212121</color>
     <color name="gray_F2F2F4">#F2F2F4</color>
