--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,12 +15,12 @@
         <item name="android:textCursorDrawable">@null</item>
         <item name="android:colorBackground">@color/colorBackground</item>
         <item name="android:actionBarStyle">@color/green</item>
-        <item name="attrTextColorMessageAndTimeHome">@color/secondaryTextColor</item>
+        <item name="attrTextColorMessageAndTimeHome">@color/textColorTimeAndMessage</item>
         <item name="colorAccent">@color/colorPrimary</item>
         <item name="colorControlNormal">@color/white</item>
         <item name="attrBackgroundColorPrimary">@color/colorPrimary</item>
         <item name="attrTextColorPrimaryTextColor">@color/primaryTextColor</item>
-        <item name="attrIconTintWhite">@color/white</item>
+        <item name="attrIconTintWhite">@color/textColorBadge</item>
         <item name="attrBackgroundTintColorSecondary">@color/colorSecondary</item>
         <item name="attrTextColorSecondaryTextColor">@color/secondaryTextColor</item>
         <item name="attrTextColorButtonTint">@color/buttonTint</item>
@@ -30,7 +30,7 @@
         <item name="attrTextColorRed">@color/red</item>
         <item name="attrStrokeColorRed">@color/red</item>
         <item name="attrRippleColorRed">@color/ripple_red</item>
-        <item name="attrTextColorWhite">@color/white</item>
+        <item name="attrTextColorWhite">@color/textColorBadge</item>
         <item name="attrBackgroundSectionColor">@color/sectionColor</item>
         <item name="attrTextColorColorTextMyMessage">@color/colorTextMyMessage</item>
         <item name="attrTextColorColorTextIncomingMessage">@color/colorTextIncomingMessage</item>
