--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -41,7 +41,8 @@
         <item name="attrBackgroundColorBackground">@color/colorBackground</item>
         <item name="attrTintColorSecondaryDark">@color/colorSecondaryDark</item>
         <item name="attrTextColorColorPrimary">@color/colorPrimary</item>
-        <item name="attrBoxStrokeColorTextInputLayoutBoxColor">@color/textinput_layout_box_color</item>
+        <item name="attrBoxStrokeColorTextInputLayoutBoxColor">@color/textinput_layout_box_color
+        </item>
         <item name="attrBoxStrokeErrorColorColorError">@color/colorError</item>
         <item name="attrErrorTextColorColorError">@color/colorError</item>
         <item name="attrErrorIconTintColorError">@color/colorError</item>
@@ -105,7 +106,8 @@
         <item name="attrBackgroundColorBackground">@color/color_FFEFFF</item>
         <item name="attrTintColorSecondaryDark">@color/color_9F6E8B</item>
         <item name="attrTextColorColorPrimary">@color/color_F38DC7</item>
-        <item name="attrBoxStrokeColorTextInputLayoutBoxColor">@color/textinput_layout_box_color</item>
+        <item name="attrBoxStrokeColorTextInputLayoutBoxColor">@color/textinput_layout_box_color
+        </item>
         <item name="attrBoxStrokeErrorColorColorError">@color/color_EF5350</item>
         <item name="attrErrorTextColorColorError">@color/color_EF5350</item>
         <item name="attrErrorIconTintColorError">@color/color_EF5350</item>
@@ -167,7 +169,8 @@
         <item name="attrBackgroundColorBackground">@color/color_E6F2FF</item>
         <item name="attrTintColorSecondaryDark">@color/color_9B9B9B</item>
         <item name="attrTextColorColorPrimary">@color/color_4AA3D9</item>
-        <item name="attrBoxStrokeColorTextInputLayoutBoxColor">@color/textinput_layout_box_color</item>
+        <item name="attrBoxStrokeColorTextInputLayoutBoxColor">@color/textinput_layout_box_color
+        </item>
         <item name="attrBoxStrokeErrorColorColorError">@color/color_EF5350</item>
         <item name="attrErrorTextColorColorError">@color/color_EF5350</item>
         <item name="attrErrorIconTintColorError">@color/color_EF5350</item>
@@ -228,7 +231,8 @@
         <item name="attrBackgroundColorBackground">@color/color_F2F2F2</item>
         <item name="attrTintColorSecondaryDark">@color/color_9B9B9B</item>
         <item name="attrTextColorColorPrimary">@color/color_7D366F</item>
-        <item name="attrBoxStrokeColorTextInputLayoutBoxColor">@color/textinput_layout_box_color</item>
+        <item name="attrBoxStrokeColorTextInputLayoutBoxColor">@color/textinput_layout_box_color
+        </item>
         <item name="attrBoxStrokeErrorColorColorError">@color/color_EF5350</item>
         <item name="attrErrorTextColorColorError">@color/color_EF5350</item>
         <item name="attrErrorIconTintColorError">@color/color_EF5350</item>
@@ -290,7 +294,8 @@
         <item name="attrBackgroundColorBackground">@color/color_001600</item>
         <item name="attrTintColorSecondaryDark">@color/color_9B9B9B</item>
         <item name="attrTextColorColorPrimary">@color/color_031E03</item>
-        <item name="attrBoxStrokeColorTextInputLayoutBoxColor">@color/textinput_layout_box_color</item>
+        <item name="attrBoxStrokeColorTextInputLayoutBoxColor">@color/textinput_layout_box_color
+        </item>
         <item name="attrBoxStrokeErrorColorColorError">@color/color_EF5350</item>
         <item name="attrErrorTextColorColorError">@color/color_EF5350</item>
         <item name="attrErrorIconTintColorError">@color/color_EF5350</item>
@@ -348,7 +353,8 @@
         <item name="attrBackgroundColorBackground">@color/color_121212</item>
         <item name="attrTintColorSecondaryDark">@color/color_D8A605</item>
         <item name="attrTextColorColorPrimary">@color/color_282828</item>
-        <item name="attrBoxStrokeColorTextInputLayoutBoxColor">@color/textinput_layout_box_color</item>
+        <item name="attrBoxStrokeColorTextInputLayoutBoxColor">@color/textinput_layout_box_color
+        </item>
         <item name="attrBoxStrokeErrorColorColorError">@color/color_EF5350</item>
         <item name="attrErrorTextColorColorError">@color/color_EF5350</item>
         <item name="attrErrorIconTintColorError">@color/color_EF5350</item>
@@ -407,7 +413,8 @@
         <item name="attrBackgroundColorBackground">@color/color_20202E</item>
         <item name="attrTintColorSecondaryDark">@color/color_59BC88</item>
         <item name="attrTextColorColorPrimary">@color/color_2A2C45</item>
-        <item name="attrBoxStrokeColorTextInputLayoutBoxColor">@color/textinput_layout_box_color</item>
+        <item name="attrBoxStrokeColorTextInputLayoutBoxColor">@color/textinput_layout_box_color
+        </item>
         <item name="attrBoxStrokeErrorColorColorError">@color/color_EF5350</item>
         <item name="attrErrorTextColorColorError">@color/color_EF5350</item>
         <item name="attrErrorIconTintColorError">@color/color_EF5350</item>
